--- a/package.json
+++ b/package.json
@@ -10,32 +10,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@open-rpc/client-js": "^1.8.1",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "babel-preset-expo": "^12.0.4",
-    "expo": "~52.0.19",
-    "expo-image-picker": "~16.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~52.0.33",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.1.0",
     "odoo-xmlrpc": "^1.0.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-background-timer": "^2.4.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-odoo-promise-based": "^0.6.8",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-simple-openvpn": "^2.1.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
     "zustand": "^5.0.3"
