--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,12 +18,15 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@xmldom/xmldom": "^0.9.8",
     "axios": "^1.7.9",
     "babel-preset-expo": "^12.0.4",
     "expo": "~52.0.33",
+    "expo-dev-client": "~5.0.14",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "glob": "^11.0.1",
     "lottie-react-native": "^7.1.0",
     "odoo-xmlrpc": "^1.0.8",
     "react": "18.3.1",
@@ -37,10 +40,18 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
+    "rimraf": "^6.0.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-async-generator-functions": "^7.26.8",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
+    "@babel/plugin-transform-numeric-separator": "^7.25.9",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
+    "@babel/plugin-transform-optional-catch-binding": "^7.25.9",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/plugin-transform-private-methods": "^7.25.9",
     "metro-react-native-babel-preset": "^0.77.0"
   },
